[tool.poetry]
name = "OwlEngine"
package-mode = false
description = ""
authors = ["Silmaen <genteur.slayer@laposte.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.build.dependencies]
depmanager = "^0.5.1"
black = "^25.12.0"
gcovr = "^8.6"

[tool.poetry.group.dev.dependencies]
rich = "^14.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
