[tool.poetry]
name = "OwlEngine"
package-mode = false
description = ""
authors = ["Silmaen <genteur.slayer@laposte.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.build.dependencies]
depmanager = "^0.5.4"
black = "^26.1.0"
gcovr = "^8.6"

[tool.poetry.group.dev.dependencies]
rich = "^14.3.2"
pillow = "^12.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
